<resources>
    <string name="app_name">PianoGrupo03</string>
    <string name="desc_tecla_do">Tecla - DO</string>
    <string name="desc_tecla_re">Tecla - RE</string>
    <string name="desc_tecla_mi">Tecla - MI</string>
    <string name="desc_tecla_fa">Tecla - FA</string>
    <string name="desc_tecla_sol">Tecla - SOL</string>
    <string name="desc_tecla_la">Tecla - LA</string>
    <string name="desc_tecla_si">Tecla - SI</string>
    <string name="desc_la_sostenido">LA SOSTENIDO</string>
    <string name="desc_sol_sostenido">SOL SOSTENIDO</string>
    <string name="desc_fa_sostenido">FA SOSTENIDO</string>
    <string name="desc_re_sostenido">RE SOSTENIDO</string>
    <string name="desc_do_sostenido">DO SOSTENIDO</string>
    <string name="tecla_clarinete">Tecla - Clarinete</string>
    <string name="tecla_acordeon">Tecla - Acordeon</string>
    <string name="tecla_trompeta">Tecla - Trompeta</string>
    <string name="tecla_saxofon">Tecla - Saxofon</string>
    <string name="tecla_bateria">Tecla - Bateria</string>
    <string name="tecla_guitarra">Tecla - Guitarra</string>
    <string name="tecla_violin">Tecla - Violin</string>
    <string name="tecla_arpa">Tecla - Arpa</string>
    <string name="txt_menu_opc_cambiar_tipo_de_piano">Cambiar Tipo de Piano</string>
    <string name="txt_menu_opc_acerca_de">Acerca de…</string>
    <string name="txt_menu_opc_salir">Salir</string>
    <string name="txt_acerca_de_nosotros">Acerca De Nosotros</string>
    <string name="txt_maicol">Maicol Josué Monge Santamaría</string>
    <string name="txt_wilber">Wilber Anibal Rivas Carranza</string>
    <string name="txt_eyleen">Eyleen Jeannethe Salinas Hernández</string>
    <string name="img_maicol">Foto de Maicol</string>
    <string name="img_wilber">Foto de Wilber</string>
    <string name="img_eyleen">Foto de Eyleen</string>
    <string name="img_logo">Logo de la App</string>
    <string name="tecla_del_tigre">tecla del tigre</string>
    <string name="tecla_del_periquito">tecla del periquito</string>
    <string name="tecla_del_perrito">tecla del perrito</string>
    <string name="tecla_del_elefantito">tecla del elefantito</string>
    <string name="tecla_del_gatito">tecla del gatito</string>
    <string name="tecla_del_cuyo">tecla del cuyo</string>
    <string name="tecla_de_la_culebra">tecla de la culebra</string>
    <string name="tecla_del_pollito">tecla del pollito</string>
</resources>