<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <!-- Teclas Blancas -->

    <LinearLayout
        android:id="@+id/white_keys_layout"
        android:layout_width="725dp"
        android:layout_height="400dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        tools:ignore="VisualLintBounds">

        <ImageButton
            android:id="@+id/key_c"
            android:layout_width="0dp"
            android:layout_height="361dp"
            android:layout_weight="1"
            android:background="@drawable/tecla_blanca_do"
            android:contentDescription="@string/desc_tecla_do"
            android:onClick="SonarDo"
            android:scaleType="fitXY"
            android:layout_marginBottom="18dp"/>

        <ImageButton
            android:id="@+id/key_d"
            android:layout_width="0dp"
            android:layout_height="361dp"
            android:layout_weight="1"
            android:background="@drawable/tecla_blanca_re"
            android:contentDescription="@string/desc_tecla_re"
            android:onClick="SonarRe"
            android:scaleType="fitXY"
            android:layout_marginBottom="18dp"/>

        <ImageButton
            android:id="@+id/key_e"
            android:layout_width="0dp"
            android:layout_height="361dp"
            android:layout_weight="1"
            android:background="@drawable/tecla_blanca_mi"
            android:contentDescription="@string/desc_tecla_mi"
            android:onClick="SonarMi"
            android:scaleType="fitXY"
            android:layout_marginBottom="18dp"/>

        <ImageButton
            android:id="@+id/key_f"
            android:layout_width="0dp"
            android:layout_height="361dp"
            android:layout_weight="1"
            android:background="@drawable/tecla_blanca_fa"
            android:contentDescription="@string/desc_tecla_fa"
            android:onClick="SonarFa"
            android:scaleType="fitXY"
            android:layout_marginBottom="18dp"/>

        <ImageButton
            android:id="@+id/key_g"
            android:layout_width="0dp"
            android:layout_height="361dp"
            android:layout_weight="1"
            android:background="@drawable/tecla_blanca_sol"
            android:contentDescription="@string/desc_tecla_sol"
            android:onClick="SonarSol"
            android:scaleType="fitXY"
            android:layout_marginBottom="18dp"/>

        <ImageButton
            android:id="@+id/key_a"
            android:layout_width="0dp"
            android:layout_height="361dp"
            android:layout_weight="1"
            android:background="@drawable/tecla_blanca_la"
            android:contentDescription="@string/desc_tecla_la"
            android:onClick="SonarLa"
            android:scaleType="fitXY"
            android:layout_marginBottom="18dp"/>

        <ImageButton
            android:id="@+id/key_b"
            android:layout_width="0dp"
            android:layout_height="361dp"
            android:layout_weight="1"
            android:background="@drawable/tecla_blanca_si"
            android:contentDescription="@string/desc_tecla_si"
            android:onClick="SonarSi"
            android:scaleType="fitXY"
            android:layout_marginBottom="18dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="700dp"
        android:layout_height="390dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        tools:ignore="VisualLintBounds">
        <!-- Teclas Negras -->

        <ImageButton
            android:id="@+id/key_c_sharp"
            android:layout_width="60dp"
            android:layout_height="280dp"
            android:layout_gravity="top|start"
            android:layout_marginStart="62dp"
            android:background="@drawable/tecla_negra"
            android:contentDescription="@string/desc_do_sostenido"
            android:onClick="SonarDoSostenido" />

        <ImageButton
            android:id="@+id/key_d_sharp"
            android:layout_width="60dp"
            android:layout_height="280dp"
            android:layout_gravity="top|start"
            android:layout_marginStart="45dp"
            android:background="@drawable/tecla_negra"
            android:contentDescription="@string/desc_re_sostenido"
            android:onClick="SonarReSostenido"/>

        <!-- No hay tecla negra entre E y F -->

        <ImageButton
            android:id="@+id/key_f_sharp"
            android:layout_width="60dp"
            android:layout_height="280dp"
            android:layout_gravity="top|start"
            android:layout_marginStart="146dp"
            android:background="@drawable/tecla_negra"
            android:contentDescription="@string/desc_fa_sostenido"
            android:onClick="SonarFaSostenido" />

        <ImageButton
            android:id="@+id/key_g_sharp"
            android:layout_width="60dp"
            android:layout_height="280dp"
            android:layout_gravity="top|start"
            android:layout_marginStart="43dp"
            android:background="@drawable/tecla_negra"
            android:contentDescription="@string/desc_sol_sostenido"
            android:onClick="SonarSolSostenido" />

        <ImageButton
            android:id="@+id/key_a_sharp"
            android:layout_width="60dp"
            android:layout_height="280dp"
            android:layout_gravity="top|start"
            android:layout_marginStart="43dp"
            android:background="@drawable/tecla_negra"
            android:contentDescription="@string/desc_la_sostenido"
            android:onClick="SonarLaSostenido" />
    </LinearLayout>

</FrameLayout>
