<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".PianoInstrumentos">
    <!-- Teclas Blancas -->

    <LinearLayout
        android:id="@+id/intrumentos_keys_layout"
        android:layout_width="725dp"
        android:layout_height="400dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        tools:ignore="UselessParent,VisualLintBounds">

        <ImageButton
            android:id="@+id/key_arpa"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/tecla_arpa"
            android:contentDescription="@string/tecla_arpa"
            android:onClick="SonarArpa"
            android:scaleType="fitXY" />

        <ImageButton
            android:id="@+id/key_violin"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/tecla_violin"
            android:contentDescription="@string/tecla_violin"
            android:onClick="SonarViolin"
            android:scaleType="fitXY" />

        <ImageButton
            android:id="@+id/key_guitarra"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/tecla_guitarra"
            android:contentDescription="@string/tecla_guitarra"
            android:onClick="SonarGuitarra"
            android:scaleType="fitXY" />

        <ImageButton
            android:id="@+id/key_bateria"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/tecla_bateria"
            android:contentDescription="@string/tecla_bateria"
            android:onClick="SonarBateria"
            android:scaleType="fitXY" />

        <ImageButton
            android:id="@+id/key_saxofon"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/tecla_saxofon"
            android:contentDescription="@string/tecla_saxofon"
            android:onClick="SonarSaxofon"
            android:scaleType="fitXY" />

        <ImageButton
            android:id="@+id/key_trompeta"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/tecla_trompeta"
            android:contentDescription="@string/tecla_trompeta"
            android:onClick="SonarTrompeta"
            android:scaleType="fitXY" />

        <ImageButton
            android:id="@+id/key_acordeon"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/tecla_acordeon"
            android:contentDescription="@string/tecla_acordeon"
            android:onClick="SonarAcordeon"
            android:scaleType="fitXY" />

        <ImageButton
            android:id="@+id/key_clarinete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/tecla_clarinete"
            android:contentDescription="@string/tecla_clarinete"
            android:onClick="SonarClarinete"
            android:scaleType="fitXY" />

    </LinearLayout>
</FrameLayout>